5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1828_1642.log
== TEST (2019-06-12 14:59:25) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:59:37) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:59:54) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:00:00) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:06:52) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i]
		h = h+1
print(h)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:07:18) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i]
		h = h+1
print(h)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:07:33) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i]
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:07:44) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i]
		h = h+1
print(v[h])
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:07:46) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i]
		h = h+1
print(v[h])
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:08:05) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i]
		h = h+1
print(v[h])
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:08:18) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i]
		h = h+1
print(v[h])
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:08:29) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i]
		h = h+1
print(v[h])
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:09:40) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i]
		h = h+1
print(h)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:12:13) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i]
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:13:30) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		h[i]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:13:38) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		h[i]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:13:57) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:15:24) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		h[v]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:15:49) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:16:10) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[i]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:16:16) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[i]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:16:45) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		h[i]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:16:51) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		h[i]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:18:24) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[i]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:19:25) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		h[v]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:19:36) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		h[v]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:19:40) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		h[i]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:19:44) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		h[i]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:19:54) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:20:33) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:20:50) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:20:56) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:21:34) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:22:02) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(vet), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:22:59) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(6, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:23:18) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(6, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:23:28) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(6, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:23:46) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(6, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:24:07) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:24:17) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(g), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:24:36) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(g), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:25:08) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(size(g), dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:25:29) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:25:42) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:26:02) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:26:10) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:26:13) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:26:34) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:26:45) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:28:40) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= h[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:28:45) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= h[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:28:55) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:29:12) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:29:21) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i] 
		h = h+1
print(v)
	
	
		
-- EXECUTION TIME:
1.1999
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1828/1642/main.py", line 12, in <module>
    v[h]= v[i] 
IndexError: index 6 is out of bounds for axis 0 with size 6

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:29:34) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:30:24) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[v] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:30:30) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[v] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:30:34) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:30:46) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:31:05) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:31:41) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[] 
		h = h+1
print(v)
	
	
		
-- ERROR:
File "XXXX", line 12
    v[h]= vet[] 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:31:48) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:32:10) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= h[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:32:16) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= h[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:32:19) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:32:24) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i] 
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:33:21) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[i]
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:33:33) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[i]
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:33:39) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i]
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:33:49) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i]
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:35:57) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i]
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:36:06) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= v[i]
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:37:47) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[i]
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:38:13) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[h]
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:38:22) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= vet[h]
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:39:20) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= i
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:39:39) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= i
		h = h+1
print(v)
	
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:39:55) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite alunos: ")))
g=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		g=g+1
print(g)
v= zeros(g, dtype=int)
h=0
for i in range(size(vet)):
	if(vet[i]%5==0):
		v[h]= i
		h = h+1
print(v)
	
	
		
-- EXECUTION TIME:
1.19778
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
6
[ 0  1  5  6 10 11]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[0 1 3 6 7]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[0 1 3 7]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
